# embedded_projects

./: README.md  network.dia  network.dia.autosave
tcp_client/: CMakeLists.txt
tcp_client/inc/: tcp_client.hh
tcp_client/src/: CMakeLists.txt  main.cpp  tcp_client.cpp
tcp_server/: CMakeLists.txt
tcp_server/inc/: CMakeLists.txt  tcpServer.hh
tcp_server/src/: CMakeLists.txt  main.cpp  tcpServer.cpp
